# sidecar

./: Cargo.toml
.cargo/: config  config.toml
llm_client/: Cargo.toml
llm_client/src/clients/: anthropic.rs  codestory.rs  fireworks.rs  gemini_pro.rs  google_ai.rs  lmstudio.rs  ollama.rs  open_router.rs  togetherai.rs  types.rs
logging/: Cargo.toml
logging/src/: lib.rs  parea.rs  reqwest_tee_middleware.rs
sidecar/: Cargo.toml
sidecar/src/agentic/tool/: broker.rs  errors.rs  input.rs  mod.rs  output.rs  type.rs
sidecar/src/agentic/tool/code_edit/: search_and_replace.rs
sidecar/src/agentic/tool/editor/: apply.rs
sidecar/src/agentic/tool/git/: edited_files.rs
sidecar/src/agentic/tool/lsp/: create_file.rs  diagnostics.rs  get_outline_nodes.rs  go_to_previous_word.rs  gotodefintion.rs  gotoimplementations.rs  gotoreferences.rs  gototypedefinition.rs  grep_symbol.rs  inlay_hints.rs  open_file.rs  quick_fix.rs  search_file.rs  subprocess_spawned_output.rs  undo_changes.rs
sidecar/src/agentic/tool/mcp/: integration_tool.rs  mod.rs
sidecar/src/agentic/tool/session/: exchange.rs  session.rs  tool_use_agent.rs
sidecar/src/agentic/tool/swe_bench/: test_tool.rs
sidecar/src/agentic/tool/terminal/: terminal.rs
sidecar/src/agentic/tool/web_search/: cache.rs  exa.rs  mod.rs  rate_limit.rs  types.rs  web_search.rs
sidecar/src/application/: application.rs
sidecar/src/mcts/: action_node.rs
sidecar/src/mcts/execution/: inference.rs
sidecar/src/webserver/: middleware.rs  mod.rs
