[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
anyhow = "1.0.75"
reqwest = "0.12.0"
thiserror = "1.0.49"
serde_json = "1.0.117"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4.38"
http = "1.2.0"
futures = "0.3.31"
reqwest-middleware = "0.4.0"
